small sonarlint stuff